--- a/style.css
+++ b/style.css
@@ -64,8 +64,8 @@ h6 {
 .main-grid {
   display: grid;
   gap: 2rem;
-  grid-auto-rows: 22rem;
-  grid-template-columns: repeat(auto-fit, minmax(min(100%, 25rem), 1fr));
+  grid-auto-rows: min-content;
+  grid-template-columns: repeat(auto-fit, minmax(min(100%, 20rem), 1fr));
 }
 .card {
   display: flex;
